After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756494 - identity: don't ever nullify identifier
identity: don't ever nullify identifier
Status: RESOLVED FIXED
Product: gnome-online-accounts
Classification: Core
Component: Kerberos
unspecified
Other All
: Normal normal
: ---
Assigned To: GNOME Online Accounts maintainer(s)
GNOME Online Accounts maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-10-13 12:49 UTC by Ray Strode [halfline]
Modified: 2015-10-14 16:10 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
identity: don't ever nullify identifier (3.00 KB, patch)
2015-10-13 12:49 UTC, Ray Strode [halfline]
committed Details | Review

Description Ray Strode [halfline] 2015-10-13 12:49:49 UTC
This fixes a hard to hit crasher.
Comment 1 Ray Strode [halfline] 2015-10-13 12:49:54 UTC
Created attachment 313176 [details] [review]
identity: don't ever nullify identifier

credentials stored in the kernel keyring disappear after they expire.
This is is different from other credential caches, which hang around
but maintain an expired timestamp until kdestroy. Because the credentials
vanish, trying to read the principal from an previously existing credential
cache, will yield NULL.

This can lead to a crash in goa which never expects the identifier of an
identity object to be NULL.

This commit makes sure we retain the old identifier in the event the
credential cache gets wiped.
Comment 2 Debarshi Ray 2015-10-14 12:02:16 UTC
Review of attachment 313176 [details] [review]:

Thanks, committed after fixing a typo in the commit message ("This is is different ...").
Comment 3 Debarshi Ray 2015-10-14 12:03:00 UTC
Pushed to master, gnome-3-18, gnome-3-16 and gnome-3-14.
Comment 4 Debarshi Ray 2015-10-14 16:10:14 UTC
This downstream bug has an example backtrace:
https://bugzilla.redhat.com/show_bug.cgi?id=1149662