identity: Don't ever nullify identifier

Credentials stored in the kernel keyring disappear after they expire.
This is different from other credential caches, which hang around but
maintain an expired timestamp until kdestroy. Because the credentials
vanish, trying to read the principal from an previously existing
credential cache will yield NULL.

This can lead to a crash because we never expect the identifier of an
identity object to be NULL. So make sure we retain the old identifier
in the event the credential cache gets wiped.

https://bugzilla.gnome.org/show_bug.cgi?id=756494